--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Name — Portfolio</title>
+  <title>Anushree Joshi — Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -13,8 +13,8 @@
     <header>
       <img src="https://via.placeholder.com/300x300.png?text=You" alt="Your profile photo" />
       <div>
-        <h1>Your Name</h1>
-        <p>5th Sem CSE student • Interested in Web Dev & Open Source</p>
+        <h1>Anushree Joshi</h1>
+        <p>5th Sem CSE(AIML) student • Interested in Web Dev & Open Source</p>
         <div class="row">
           <a class="btn" href="https://your-website.vercel.app" target="_blank">Website</a>
           <a class="btn" href="https://github.com/your-username" target="_blank">GitHub</a>
@@ -33,7 +33,7 @@
     <section id="about">
       <h2>About</h2>
       <p>
-        I’m a Computer Science undergraduate learning full-stack development.  
+        I’m a Computer Science with AIML undergraduate learning full-stack development.  
         I enjoy building small products, writing clean code, and collaborating on GitHub.
       </p>
     </section>
@@ -74,7 +74,7 @@
     </section>
 
     <footer>
-      © <span id="y"></span> Your Name. Built with HTML & CSS.
+      © <span id="y"></span> Anushree Joshi. Built with HTML & CSS.
     </footer>
   </div>
 
