--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>5th Sem CSE(AIML) student • Interested in Web Dev & Open Source</p>
         <div class="row">
           <a class="btn" href="https://your-website.vercel.app" target="_blank">Website</a>
-          <a class="btn" href="https://github.com/your-username" target="_blank">GitHub</a>
+          <a class="btn" href="https://github.com/AnushreeJoshi2005" target="_blank">GitHub</a>
           <a class="btn" href="https://peerlist.io/your-username" target="_blank">Peerlist</a>
         </div>
       </div>
